--- a/charts/atlantis/values.yaml
+++ b/charts/atlantis/values.yaml
@@ -1,32 +1,36 @@
 # Enhanced Atlantis Helm Chart - Wrapper Configuration
-# This chart wraps the official Atlantis chart with enterprise enhancements:
-# - Argo Rollouts support (Blue-Green, Canary, Rolling Update)
-# - Intelligent storage selection (EBS/EFS based on replica count)
-# - Enhanced monitoring (ServiceMonitor, health checks)
-# - High availability (PodDisruptionBudget)
+# This chart wraps the official Atlantis chart (https://github.com/runatlantis/helm-charts)
+# with optional enterprise enhancements for advanced deployment strategies and operational features.
+#
+# ARCHITECTURE:
+# - Official Atlantis chart values go under "atlantis:" key (Helm sub-chart pattern)
+# - Enhancement features use "enhanced*" namespace prefixes (disabled by default)
+# - Dependencies defined in Chart.yaml ensure official chart is installed
+#
+# For complete list of official chart values, see:
+# https://github.com/runatlantis/helm-charts/blob/main/charts/atlantis/values.yaml
 
-#################################
-# ENHANCED FEATURES (TOP LEVEL) #
-#################################
+#############################################
+# ENHANCEMENT FEATURES (disabled by default)
+#############################################
 
-# Replica count for enhanced features (Rollouts, etc.)
-# This controls the number of replicas for Rollout resources
-replicaCount: 1
+# Enhanced Deployment with Argo Rollouts
+# When enabled, replaces standard Deployment with Rollout for advanced strategies
+enhancedDeployment:
+  enabled: false  # Set to true to use Argo Rollouts instead of standard Deployment
+  type: rollout   # Type of rollout resource (always "rollout" when enabled)
+  strategy: blueGreen  # Strategy: "rollingUpdate", "blueGreen", or "canary"
 
-# Enhanced deployment configuration with Argo Rollouts support
-deployment:
-  # Type: "deployment" for official chart Deployment, "rollout" for Argo Rollouts
-  type: deployment  # Default to official chart, set to "rollout" for enhancements
-  # Strategy: "rollingUpdate", "blueGreen", or "canary" (only used if type == rollout)
-  strategy: blueGreen
-  # Rolling update strategy configuration
+  # Rolling update configuration (for strategy: rollingUpdate)
   rollingUpdate:
     maxSurge: "25%"
     maxUnavailable: "25%"
-  # Blue-green strategy configuration (only used if strategy == blueGreen)
+
+  # Blue-Green deployment configuration (for strategy: blueGreen)
   autoPromotionEnabled: false
   scaleDownDelaySeconds: 30
-  # Canary strategy configuration (only used if strategy == canary)
+
+  # Canary deployment configuration (for strategy: canary)
   canary:
     steps:
       - setWeight: 20
@@ -40,185 +44,77 @@ deployment:
     analysis: {}
     trafficRouting: {}
 
-# Enhanced monitoring and observability
-monitoring:
-  serviceMonitor:
-    enabled: false
-    interval: "30s"
-    scrapeTimeout: "10s"
-    labels: {}
+# Enhanced Storage with Smart EBS/EFS Selection
+# When enabled, provides intelligent storage selection based on replica count
+enhancedStorage:
+  enabled: false  # Set to true to use enhanced PVC with EBS/EFS auto-selection
 
-# High availability configuration
-podDisruptionBudget:
-  enabled: false
-  # Specify either minAvailable OR maxUnavailable (not both)
-  minAvailable: 1
-  # maxUnavailable: 1
-
-# Enhanced persistent storage with auto-selection
-# Automatically selects storage type based on replica count:
-# - replicaCount = 1: Uses EBS (ReadWriteOnce) for optimal performance
-# - replicaCount > 1: Uses EFS (ReadWriteMany) for shared access
-persistence:
-  enabled: false
-  # EBS configuration (for single replica)
+  # EBS configuration (automatically selected when atlantis.replicaCount == 1)
   ebs:
-    storageClass: "gp3"  # AWS EBS storage class
+    storageClass: "gp3"
     size: 10Gi
-  # EFS configuration (for multi-replica)
+
+  # EFS configuration (automatically selected when atlantis.replicaCount > 1)
   efs:
-    storageClass: "efs-sc"  # AWS EFS storage class
-    size: 50Gi  # EFS typically needs more space since it's shared
-  # Manual overrides (optional - disables auto-selection when set)
+    storageClass: "efs-sc"
+    size: 50Gi
+
+  # Manual overrides (optional - disables auto-selection)
   storageClass: ""  # Override: specify exact storage class
   size: ""          # Override: specify exact size
   accessModes: []   # Override: specify exact access modes
-  # Optional: existing claim name (bypasses all auto-selection)
-  existingClaim: ""
+  existingClaim: "" # Use existing PVC instead of creating new one
 
-####################################################################
-# OFFICIAL ATLANTIS CHART CONFIGURATION (DIRECT PASS-THROUGH)    #
-####################################################################
+# Enhanced Monitoring with Prometheus ServiceMonitor
+# When enabled, creates ServiceMonitor resource for Prometheus metrics scraping
+enhancedMonitoring:
+  serviceMonitor:
+    enabled: false  # Set to true to create ServiceMonitor for Prometheus
+    interval: "30s"
+    scrapeTimeout: "10s"
+    labels: {}
+    # labels:
+    #   prometheus: kube-prometheus
 
-# The 'atlantis:' section contains values that are passed directly to the
-# official Atlantis chart. No complex transformation is performed.
-# Configure these values as you would for the official chart.
+# Enhanced High Availability with PodDisruptionBudget
+# When enabled, ensures minimum availability during voluntary disruptions
+enhancedHA:
+  podDisruptionBudget:
+    enabled: false  # Set to true to create PodDisruptionBudget
+    minAvailable: 1  # Minimum pods that must remain available
+    # maxUnavailable: 1  # Alternative: maximum pods that can be unavailable
+
+################################################################
+# OFFICIAL ATLANTIS CHART VALUES (Sub-Chart Configuration)
+################################################################
+# All values under "atlantis:" are passed directly to the official Atlantis chart dependency.
+#
+# This wrapper provides a BARE MINIMUM configuration with just GitHub credentials.
+# The official chart provides sensible defaults for everything else.
+#
+# For complete configuration options (orgAllowlist, ingress, resources, etc.), see:
+# https://github.com/runatlantis/helm-charts/blob/main/charts/atlantis/values.yaml
 
 atlantis:
-  # Replace this with your own repo allowlist
-  orgAllowlist: "github.com/myorg/*"
-
-  # Atlantis URL (if not using ingress)
-  atlantisUrl: ""
-
-  # Log level: debug, info, warn, or error
+  # Log level for Atlantis (required by schema validation)
   logLevel: "info"
 
-  # GitHub configuration
-  github: {}
-  # github:
-  #   user: myuser
-  #   token: mytoken
-  #   secret: mysecret
+  # GitHub authentication (Personal Access Token)
+  # IMPORTANT: Replace these placeholder values with your actual credentials
+  github:
+    user: "test-user"
+    token: "ghp_test_token_placeholder_12345678901234567890"
+    secret: "test-webhook-secret-12345"
 
-  # GitHub App configuration (alternative to user/token)
-  githubApp: {}
-  # githubApp:
-  #   id: 123456
-  #   slug: myapp
-  #   key: |
-  #     -----BEGIN PRIVATE KEY-----
-  #     ...
-  #     -----END PRIVATE KEY-----
-
-  # Image configuration
-  image:
-    repository: runatlantis/atlantis
-    tag: latest
-    pullPolicy: IfNotPresent
-
-  # Image pull secrets
-  imagePullSecrets: []
-
-  # Replica count - set this to 0 when using deployment.type="rollout"
-  # to prevent conflicts between Rollout and Deployment resources
-  replicaCount: 1
-
-  # Service configuration
-  service:
-    type: ClusterIP
-    port: 4141
-    targetPort: 4141
-    loadBalancerIP: null
-
-  # Ingress configuration
-  ingress:
-    enabled: false
-    ingressClassName: ""
-    annotations: {}
-    path: /
-    pathType: Prefix
-    host: atlantis.example.com
-    tls: []
-
-  # Resource limits and requests
-  resources:
-    limits:
-      memory: 1Gi
-      cpu: 100m
-    requests:
-      memory: 512Mi
-      cpu: 100m
-
-  # Node selector
-  nodeSelector: {}
-
-  # Tolerations
-  tolerations: []
-
-  # Affinity
-  affinity: {}
-
-  # Pod annotations
-  podAnnotations: {}
-
-  # Pod labels
-  podLabels: {}
-
-  # Security context
-  securityContext: {}
-
-  # Pod security context
-  podSecurityContext: {}
-
-  # Service account
-  serviceAccount:
-    # Specifies whether a service account should be created
-    create: true
-    # Annotations to add to the service account
-    annotations: {}
-    # The name of the service account to use.
-    name: ""
-
-  # Environment variables
-  environmentSecrets: []
-  environment: {}
-  # Example:
-  # environment:
-  #   ATLANTIS_GH_USER: "your-github-user"
-  #   ATLANTIS_GH_TOKEN: "your-github-token"
-  #   ATLANTIS_DISABLE_APPLY_ALL: "true"
-
-  # Container command
-  command: []
-
-  # Data storage - simple string value for official chart compatibility
-  dataStorage: ""
-
-  # Liveness probe
-  livenessProbe:
-    enabled: true
-    periodSeconds: 60
-    initialDelaySeconds: 5
-    timeoutSeconds: 5
-    successThreshold: 1
-    failureThreshold: 5
-
-  # Readiness probe
-  readinessProbe:
-    enabled: true
-    periodSeconds: 60
-    initialDelaySeconds: 5
-    timeoutSeconds: 5
-    successThreshold: 1
-    failureThreshold: 5
-
-  # Additional volumes
-  extraVolumes: []
-  extraVolumeMounts: []
-
-  # Init containers
-  initContainers: []
-
-  # Extra containers
-  extraContainers: []
+  # Add any other official chart values here as needed:
+  # orgAllowlist: "github.com/myorg/*"
+  # atlantisUrl: "https://atlantis.example.com"
+  # image:
+  #   tag: "v0.27.0"
+  # ingress:
+  #   enabled: true
+  #   host: "atlantis.example.com"
+  # resources:
+  #   limits:
+  #     memory: "2Gi"
+  # etc...
