--- a/charts/atlantis/templates/service-preview.yaml
+++ b/charts/atlantis/templates/service-preview.yaml
@@ -1,4 +1,4 @@
-{{- if and (eq .Values.deployment.type "rollout") (eq .Values.deployment.strategy "blueGreen") }}
+{{- if and .Values.enhancedDeployment.enabled (eq .Values.enhancedDeployment.type "rollout") (eq .Values.enhancedDeployment.strategy "blueGreen") }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -6,12 +6,12 @@ metadata:
   labels:
     {{- include "atlantis.labels" . | nindent 4 }}
 spec:
-  type: {{ .Values.atlantis.service.type }}
+  type: {{ .Values.atlantis.service.type | default "ClusterIP" }}
   selector:
     {{- include "atlantis.selectorLabels" . | nindent 4 }}
   ports:
-    - port: {{ .Values.atlantis.service.port }}
-      targetPort: 4141
+    - port: {{ .Values.atlantis.service.port | default 4141 }}
+      targetPort: {{ .Values.atlantis.service.targetPort | default 4141 }}
       protocol: TCP
       name: http
 {{- end }}
